[gd_scene load_steps=2 format=3 uid="uid://yp7xta1els2i"]

[ext_resource type="Script" path="res://Scripts/InteractionManager.gd" id="1_a66id"]

[node name="InteractionManager" type="Area2D"]
collision_layer = 128
collision_mask = 128
script = ExtResource("1_a66id")

[connection signal="area_entered" from="." to="." method="_on_Interaction_Manager_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Interaction_Manager_area_exited"]
